# polytune

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.md  README.md  e.sh  hax-driver.py  hax.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  bench_large_join.yml  ci.yml  pages.yml  publish.yml  pull_request.yml  push.yml  push_http_server_image.yml  test.yml  test_connector_integration.yml
benches/: .join.garble.rs  join.rs  main.rs  memory_tracking.rs  mpc.rs  primitives.rs
crates/: README.md
crates/channel-experiment/: Cargo.toml
crates/channel-experiment/src/: complex_channel.rs  lib.rs  simple_channel.rs  split_channel.rs
crates/polytune-http-server/: .example.garble.rs  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/polytune-http-server/garble_programs/: measles.garble.rs
crates/polytune-http-server/policies/: policy0-big.json  policy0.json  policy1-big.json  policy1.json
crates/polytune-http-server/src/: api.rs  lib.rs  policy_client.rs  router.rs  server.rs
crates/polytune-http-server/test_key/: test-private.pem  test-public.pem
crates/polytune-http-server/tests/: cli.rs  polytune-connector-integration.sh  server.rs
crates/polytune-http-server/tests/common/: mod.rs  output_server.rs
crates/polytune-server/: .example.garble.rs  Cargo.toml  Dockerfile  README.md  policy0.json  policy1-big.json  policy1.json
crates/polytune-server-core/: Cargo.toml  README.md
crates/polytune-server-core/policies/: policy0.json  policy1.json
crates/polytune-server-core/src/: client.rs  handle.rs  lib.rs  policy.rs  state.rs
crates/polytune-server-core/src/state/: tests.rs
crates/polytune-server-v2/: Cargo.toml
crates/polytune-server-v2/src/: api.rs  lib.rs  router.rs  server.rs  state.rs
crates/polytune-server-v2/tests/: cli.rs
crates/polytune-server/old-bin/: channel.rs
crates/polytune-server/src/: api.rs  channel.rs  cli.rs  consts.rs  lib.rs  main.rs  mpc.rs  router.rs  server.rs  state.rs
crates/polytune-server/tests/: cli.rs
crates/polytune-test-utils/: Cargo.toml
crates/polytune-test-utils/src/: lib.rs  peak_alloc.rs
docs/src/: SUMMARY.md  contributing.md  landing.md  protocol.md
docs/src/examples/: api.md  channel.md  http_multi.md  http_single.md  iroh.md  sql.md  sync.md  wasm.md
examples/api-integration/: .example.garble.rs  Cargo.toml  Dockerfile  README.md  party1.Dockerfile  policy0-big.json  policy0.json  policy1-big.json  policy1.json
examples/api-integration/src/: main.rs
examples/api-integration/tests/: cli.rs
examples/http-channels/: Cargo.toml  simulate.sh
examples/http-channels/src/: http_channel.rs  main.rs  server.rs
examples/http-multi-server-channels/: Cargo.toml
examples/http-multi-server-channels/src/: main.rs
examples/http-multi-server-channels/tests/: cli.rs
examples/http-single-server-channels/: Cargo.toml
examples/http-single-server-channels/src/: http_channel.rs  main.rs  server.rs
examples/http-single-server-channels/tests/: cli.rs
examples/iroh-channels/: Cargo.toml
examples/iroh-channels/src/: iroh_channel.rs  main.rs
examples/iroh-channels/tests/: cli.rs
examples/iroh-p2p-channels/: Cargo.toml
examples/iroh-p2p-channels/src/: iroh_channel.rs  main.rs
examples/iroh-p2p-channels/tests/: cli.rs
examples/p2p-channels/: Cargo.toml  simulate.sh
examples/p2p-channels/src/: main.rs
examples/postgres-integration/: .add.garble.rs  .example.garble.rs  Cargo.toml  docker-compose.yml  policies0.json  policies1.json  policies2.json  preprocessor.json
examples/postgres-integration/src/: main.rs
examples/postgres-integration/templates/: policy.html
examples/postgres-integration/tests/: cli.rs
examples/sql-integration/: .example.garble.rs  Cargo.toml  README.md  docker-compose.yml  party0.Dockerfile  party1.Dockerfile  policies0.json  policies1.json  policies2.json  policy0.json  policy1.json  preprocessor.json
examples/sql-integration/seeds/db0/: early_detection_screening.csv  init.sql  location_town.csv  residents.csv
examples/sql-integration/seeds/db1/: disability.csv  init.sql  insurance.csv  school_entry_examination.csv
examples/sql-integration/seeds/db_out/: init.sql
examples/sql-integration/src/: main.rs
examples/sql-integration/templates/: policies.html
examples/sql-integration/tests/: cli.rs
examples/sync-channel/: Cargo.toml
examples/sync-channel/src/: lib.rs  sync_channel.rs
examples/sync-channel/tests/: test.rs
examples/wasm-http-channels/: .benchmark.garble.rs  Cargo.toml  Dockerfile  build.sh  fly.toml  index.html
examples/wasm-http-channels/src/: lib.rs  main.rs
polytune_docs/src/: SUMMARY.md  bench.md  contributing.md  installation.md  landing.md  protocol.md
polytune_docs/src/examples/: channel.md  http_multi.md  http_single.md  iroh.md  sync.md  wasm.md
proofs/fstar/dependencies/: Blake3.fst  Serde.De.Impls.fst  Serde.De.fst  Serde.Ser.Impls.fst  Serde.Ser.fst  Smallvec.fst
proofs/fstar/extraction/: Makefile  Polytune.Channel.fst  Polytune.Data_types.fst  Polytune.Faand.Spec.fst  Polytune.Faand.fst  Polytune.Ot.fst  Polytune.Swankyot.fst  Rand.Distributions.Other.fst  Rand.Rng.fst  Rand.fst  Rand_chacha.Chacha.fst  Serde.De.Impls.fst  Serde.Ser.fst  (+2 more)
src/: aes_hash.rs  aes_rng.rs  bench_reexports.rs  block.rs  channel.rs  circuit.rs  crypto.rs  data_types.rs  faand.rs  fpre.rs  garble.rs  hash.rs  lib.rs  mpc.rs  ot.rs  protocol.rs  rand_compat.rs  transpose.rs  utils.rs
src/block/: gf128.rs
src/crypto/: aes_hash.rs  aes_rng.rs
src/mpc/: data_types.rs  faand.rs  fpre.rs  garble.rs  protocol.rs
src/ot_core/: LICENSE.md  alsz.rs  chou_orlandi.rs  kos.rs  mod.rs
src/otext/: base_cot.rs  baseot.rs  block.rs  constants.rs  crypto_utils.rs  ferret_cot.rs  iknp.rs  lpn_f2.rs  mod.rs  mpcot.rs  preot.rs  spcot_recver.rs  spcot_sender.rs  twokeyprp.rs  utils.rs
src/swankyot/: LICENSE.md  alsz.rs  chou_orlandi.rs  cointoss.rs  kos.rs  mod.rs  utils.rs
src/transpose/: avx2.rs  portable.rs
src/utils/: file_or_mem_buf.rs  maybe_file_buf.rs  serde.rs
tests/: fpre.rs  protocol.rs
(+3 files in other folders)
