workspace = { members = [
    "examples/http-multi-server-channels",
    "examples/http-single-server-channels",
    "examples/iroh-p2p-channels",
    "examples/wasm-http-channels",
    "examples/sql-integration",
    "examples/sync-channel",
    "examples/api-integration",
] }
[package]
name = "polytune"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
description = "Maliciously-Secure Multi-Party Computation (MPC) Engine using Authenticated Garbling"
repository = "https://github.com/sine-fdn/polytune/"
license = "MIT"
categories = ["cryptography"]
keywords = [
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
    "mpc",
]

[features]
is_sync = ["maybe-async/is_sync"]

[dependencies]
bincode = "1.3.3"
blake3 = "1.5.0"
chacha20poly1305 = "0.10.1"
garble_lang = { version = "0.5.0", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["sync", "macros", "rt", "time"] }
tracing = "0.1.41"
trait-variant = "0.1.1"
maybe-async = { version = "0.2" }
async-trait = "0.1.77"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }

scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev = "154fa34" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

[[bench]]
name = "join"
harness = false
