workspace = { members = [
    "examples/http-multi-server-channels",
    "examples/http-single-server-channels",
    "examples/iroh-p2p-channels",
    "examples/wasm-http-channels",
    "examples/sql-integration",
    "examples/api-integration",
] }
[package]
name = "polytune"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"
description = "Maliciously-Secure Multi-Party Computation (MPC) Engine using Authenticated Garbling"
repository = "https://github.com/sine-fdn/polytune/"
license = "MIT"
categories = ["cryptography"]
keywords = [
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
    "mpc",
]
# we use one bench binary with `benches/main.rs` as the starting point which
# executes benches in various modules under `benches/`. Those modules should
# not be automatically detected as separate benchmarks.
autobenches = false

[lib]
bench = false

[features]
# For internal use only!
# To work around a limitation in criterion, we define a "private" feature
# which we use to conditionally expose some otherwise private functions
# as public for benchmarking. The __ prefix results in docs.rs not listing
# this feature. 
__bench = []

[dependencies]
aes = "0.9.0-rc.0"
bincode = "1.3.3"
blake3 = "1.5.0"
bytemuck = { version = "1.23.1", features = ["latest_stable_rust"] }
chacha20poly1305 = "0.10.1"
cpufeatures = "0.2.17"
garble_lang = { version = "0.5.0", features = ["serde"] }
rand = "0.9.1"
rand_core_0_6 = { package = "rand_core", version = "0.6" }
rand_chacha = "0.9.0"
serde = { version = "1.0.195", features = ["derive"] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.35.1", features = ["sync", "macros", "rt", "time"] }
tracing = "0.1.41"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
wide = { version = "0.7.32", features = ["serde"] }
hybrid-array = { version = "0.3.1", features = ["serde", "bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# For wasm compatibility, we need to enable the getrandom js features
# currently both of these versions are present in the dependency tree
# Furthermore RUSTFLAGS needs to be set to
# RUSTFLAGS='--cfg getrandom_backend="wasm_js"'
# when compiling for wasm32-unknown-unknown
getrandom_0_2 = { package = "getrandom", version = "0.2.16", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bench]]
name = "main"
harness = false
required-features = ["__bench"]

[package.metadata.cargo-machete]
# we need the hybrid-array dependency to enable the serde and bytemuck features
ignored = ["hybrid-array"]
