[package]
name = "polytune-http-server"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
aide = { version = "0.15.1", features = [
    "axum",
    "axum-json",
    "macros",
    "swagger",
] }
anyhow = "1.0.99"
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
garble_lang = { version = "0.7.0", features = ["json_schema"] }
polytune-server-core = { path = "../polytune-server-core", version = "0.1.0" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
schemars = { version = "0.9", features = ["url2", "uuid1"] }
serde = "1.0.197"
serde_json = "1.0.143"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }
