[package]
name = "polytune-http-server"
version = "0.2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
aide = { version = "0.15.1", features = [
    "axum",
    "axum-json",
    "macros",
    "swagger",
] }
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
garble_lang = { version = "0.7.0-alpha.1", features = ["json_schema"] }
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
polytune-server-core = { path = "../polytune-server-core", version = "0.1.0" }
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
schemars = { version = "0.9", features = ["url2", "uuid1"] }
serde = "1.0.197"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde"] }

[target.'cfg(all(target_arch = "x86_64", target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }

[dev-dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.28", features = ["blocking"] }
tokio-util = "0.7.18"
uuid = { version = "1.19.0", features = ["v4"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }
