[package]
name = "polytune-server-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
blake3 = "1.5.1"
futures = "0.3.31"
garble_lang = { version = "0.7.0-alpha.1", features = ["json_schema"] }
polytune = { path = "../../", version = "0.2.0-alpha.2" }
schemars = { version = "0.9", features = ["url2", "uuid1"] }
serde = "1.0.197"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.143"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
