[package]
name = "polytune-server-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
blake3 = "1.5.1"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
    "async-await-macro",
] }
garble_lang = { version = "0.7.0-alpha.1", features = ["json_schema"] }
polytune = { path = "../../", version = "0.2.0-alpha.2" }
schemars = { version = "0.9", features = ["url2", "uuid1"] }
serde = "1.0.197"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
