[package]
name = "http-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
parlay = { path = "../../", version = "0.1.0" }
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
