[package]
name = "polytune-http-multi-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
polytune = { path = "../../", version = "0.2.0-alpha.1" }
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
