[package]
name = "polytune-http-single-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.42", features = ["derive"] }
polytune = { path = "../../", version = "0.2.0-alpha.1" }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
