[package]
name = "parlay-iroh-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
clap = { version = "4.4.18", features = ["derive"] }
iroh-net = "0.12.0"
parlay = { path = "../../", version = "0.1.0" }
quinn = "0.10.2"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
