[package]
name = "polytune-iroh-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
bytes = { version = "1.7", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
iroh = "0.34.0"
iroh-gossip = "0.34.1"
polytune = { path = "../../", version = "0.1.0" }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
rand = { version = "0.8.5", features = ["std_rng"] }
n0-future = "0.1.2"
data-encoding = "2.6.0"
postcard = { version = "1", default-features = false, features = [
    "alloc",
    "use-std",
    "experimental-derive",
] }
