[package]
name = "parlay-sql-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
blake3 = "1.5.1"
clap = { version = "4.4.18", features = ["derive"] }
parlay = { path = "../../", version = "0.1.0" }
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "any",
    "postgres",
    "mysql",
    "sqlite",
] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
