[package]
edition = "2024"
name = "polytune-sql-integration"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
blake3 = "1.5.1"
clap = { version = "4.5.41", features = ["derive"] }
polytune = { path = "../../", version = "0.2.0-alpha.1" }
polytune-test-utils = { path = "../../crates/polytune-test-utils" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = [
    "any",
    "mysql",
    "postgres",
    "runtime-tokio",
    "sqlite",
] }
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
