[package]
name = "polytune-wasm-http-channels"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"
required-features = ["bin"]

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
bin = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber"]

[dependencies]
#
# for the server:
#
axum = { version = "0.7.4", optional = true }
tokio = { version = "1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
], optional = true }
tower-http = { version = "0.5.1", features = ["trace"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
#
# for the client:
#
polytune = { path = "../../", version = "0.1.0" }
reqwest = "0.12.12"
url = "2.5.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
#
# to make working on the server a bit less tedious:
#
# axum = "0.7.4"
# tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
# tower-http = { version = "0.5.1", features = ["trace"] }
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
