[package]
name = "polytune-wasm-http-channels"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "broker"
path = "src/main.rs"
required-features = ["bin"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
bin = [
    "anyhow",
    "axum",
    "clap",
    "http",
    "tower-http",
    "tracing",
    "tracing-subscriber",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.77", features = ["console"] }
#
# for the server:
#
anyhow = { version = "1.0.100", optional = true }
axum = { version = "0.8.8", optional = true }
clap = { version = "4.5.57", features = ["derive"], optional = true }
http = { version = "1.4", optional = true }
tower-http = { version = "0.6.8", features = [
    "cors",
    "trace",
], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
#
# for the client:
#
polytune = { path = "../../", version = "0.2.0-alpha.1" }
reqwest = "0.12.28"
url = "2.5.8"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[package.metadata.cargo-machete]
# needed by wasm-bindgen
ignored = ["wasm-bindgen-futures"]

#
# to make working on the server a bit less tedious:
#
# axum = "0.7.4"
# tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
# tower-http = { version = "0.5.1", features = ["trace"] }
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
